[project]
name = "alphainspect"
authors = [
    { name = "wukan", email = "wu-kan@163.com" },
]
description = "factor performance visualization"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["quant", "alpha", "performance", "visualization"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    'pandas',
    'polars_ta',
    'matplotlib',
    'seaborn',
    'statsmodels',
    'ipykernel',
    'nbconvert',
    'loguru',
    'scipy',
    'scikit-learn',
]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "alphainspect/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["alphainspect"]
include-package-data = true

[tool.hatch.build.targets.sdist]
include = ["alphainspect*"]


